src/objects/Web_Form_Data__c.object
<CustomObject>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postcode__c</fullName>
        <label>Address Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_an_existing_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you an existing customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Web Form Data</relationshipLabel>
        <relationshipName>Web_Form_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complaint_Details__c</fullName>
        <label>Complaint Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <label>EBS ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Details__c</fullName>
        <label>Enquiry Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_name__c</fullName>
        <label>Form name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Content__c</fullName>
        <label>GA Campaign Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Medium__c</fullName>
        <label>GA Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Source__c</fullName>
        <label>GA Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Term__c</fullName>
        <label>GA Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Unique_ID__c</fullName>
        <label>GA Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_product_to_discuss__c</fullName>
        <label>HPP product to discuss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Purchase Plan (including Help to Buy)</fullName>
                </value>
                <value>
                    <fullName>Buy To Let Purchase Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_telephone__c</fullName>
        <label>Home telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_BTL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in BTL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_CPF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in CPF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_DPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in DPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_FTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in FTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_HPP_Premier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in HPP Premier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_HPP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in HPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_HPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in HPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_IMT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in IMT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_ISA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in ISA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Instant_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Instant Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Long_Term_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Long Term Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Notice_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Notice Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Pensions_and_Investments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Pensions and Investments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Short_Term_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Short Term Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_YPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in YPSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Reference__c</fullName>
        <label>Marketing Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_telephone__c</fullName>
        <label>Mobile telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NOT_by_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NOT by email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_By_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not By Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_By_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not By SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_by_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not by phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Products__c</fullName>
        <label>Other Products</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefered_Contact_Method__c</fullName>
        <label>Prefered Contact Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_phone_number__c</fullName>
        <label>Preferred phone number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospects_Customers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospects/Customers</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Web Form Data</relationshipLabel>
        <relationshipName>Web_Form_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Products_to_discuss__c</fullName>
        <label>Savings Products to discuss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed term deposit</fullName>
                </value>
                <value>
                    <fullName>Notice accounts</fullName>
                </value>
                <value>
                    <fullName>Instant access</fullName>
                </value>
                <value>
                    <fullName>ISA&apos;s</fullName>
                </value>
                <value>
                    <fullName>Young person&apos;s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Not taken forward</fullName>
                </value>
                <value>
                    <fullName>Converted to case</fullName>
                </value>
                <value>
                    <fullName>Converted to HPP CAA</fullName>
                </value>
                <value>
                    <fullName>Converted to CAA</fullName>
                </value>
                <value>
                    <fullName>Converted to other opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_product_to_discuss__c</fullName>
        <label>Type of product to discuss</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Finance</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Individual savings accounts (ISAs)</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Other products</fullName>
                </value>
                <value>
                    <fullName>General enquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_telephone__c</fullName>
        <label>Work telephone</label>
        <type>Phone</type>
    </fields>
    <label>Web Form Data</label>
    <listViews>
        <fullName>Aamir_Jafri_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Aamir</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Jafri</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Aamir Jafri Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_Direct</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>Aamir,Imran,Junaid,Rizwan,Salman,Shamim,Sharaz,Umar,Firoza</value>
        </filters>
        <label>HPP Direct</label>
        <language>en_US</language>
        <sharedTo>
            <role>HPPSpecialist</role>
            <role>HPP_team_leader</role>
            <role>Intermediary_specialist</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Imrans_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Imran</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Mustafa</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Imrans Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Junaid_s_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Junaid</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Sarwar</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Junaid&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BCSA</role>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mehwish_s_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Mehwish</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Mirza</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Mehwish&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outbound_Sales</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>notEqual</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA,Converted to CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to other opportunity</value>
        </filters>
        <label>Outbound Sales</label>
        <language>en_US</language>
        <sharedTo>
            <role>CallCentreAgent</role>
            <role>CallCentreManager</role>
            <role>Call_Centre_Team_Leader</role>
            <role>Direct_Sales_Agent</role>
            <role>Direct_Sales_Team_Leader</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rizwan_Ali_s_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Rizwan</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Ali</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Rizwan Ali&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salman_s_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Salman</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Buksh</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Salman&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shamim_s_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Shamim</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Chowdhury</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Shamim&apos;s Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sharaz_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Sharaz</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Younas</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Sharaz Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Umar_Kitchlew_Leads</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Address_Postcode__c</columns>
        <columns>Type_of_product_to_discuss__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_of_product_to_discuss__c</field>
            <operation>equals</operation>
            <value>Home Finance</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Umar</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Kitchlew</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not taken forward,Converted to case,Converted to HPP CAA</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Converted to CAA,Converted to other opportunity</value>
        </filters>
        <label>Umar Kitchlew Leads</label>
        <language>en_US</language>
        <sharedTo>
            <role>BDM</role>
            <role>Senior_BDM</role>
            <role>Senior_Sales_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WForm-{00000}</displayFormat>
        <label>Web Form Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Form Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>